--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,9 @@
     "vue-electron": "^1.0.6",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.2",
-    "vuex": "^2.1.1"
+    "vuex": "^2.1.1",
+    "firebase": "^3.6.9",
+    "vuexfire": "^0.4.0"
   },
   "devDependencies": {},
   "author": "Luke Todd <luke.todd@plus.net>"
